--- a/deploy/charts/weaviate-health/templates/deployment-services-mocks.yaml
+++ b/deploy/charts/weaviate-health/templates/deployment-services-mocks.yaml
@@ -14,6 +14,8 @@ spec:
       app.kubernetes.io/name: {{ include "weaviate-health.fullname" . | printf "%s-service-a-mock" }}
   template:
     metadata:
+      annotations:
+        checksum/mocksConfig: {{ include (print $.Template.BasePath "/mocks-configmap.yaml") . | sha256sum }}
       labels:
         app.kubernetes.io/name: {{ include "weaviate-health.fullname" . | printf "%s-service-a-mock" }}
     spec:
@@ -33,13 +35,17 @@ spec:
           volumeMounts:
             - name: app-config
               mountPath: /home/wiremock
-              readOnly: true
           resources:
             {{- toYaml .Values.mocks.resources | nindent 12 }}
       volumes:
         - name: app-config
-          hostPath:
-            path: {{ .Values.mocks.pwd }}/.local/wiremock/service-a
+          configMap:
+            name: {{ include "weaviate-health.fullname" . | printf "%s-mocks" }}
+            items:
+              - key: service-a__files-health.json
+                path: __files/health.json
+              - key: service-a-mappings-config.json
+                path: mappings/config.json
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -56,6 +62,8 @@ spec:
       app.kubernetes.io/name: {{ include "weaviate-health.fullname" . | printf "%s-service-b-mock" }}
   template:
     metadata:
+      annotations:
+        checksum/mocksConfig: {{ include (print $.Template.BasePath "/mocks-configmap.yaml") . | sha256sum }}
       labels:
         app.kubernetes.io/name: {{ include "weaviate-health.fullname" . | printf "%s-service-b-mock" }}
     spec:
@@ -75,13 +83,17 @@ spec:
           volumeMounts:
             - name: app-config
               mountPath: /home/wiremock
-              readOnly: true
           resources:
             {{- toYaml .Values.mocks.resources | nindent 12 }}
       volumes:
         - name: app-config
-          hostPath:
-            path: {{ .Values.mocks.pwd }}/.local/wiremock/service-b
+          configMap:
+            name: {{ include "weaviate-health.fullname" . | printf "%s-mocks" }}
+            items:
+              - key: service-b__files-service-unavailable.json
+                path: __files/service-unavailable.json
+              - key: service-b-mappings-config.json
+                path: mappings/config.json
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -98,6 +110,8 @@ spec:
       app.kubernetes.io/name: {{ include "weaviate-health.fullname" . | printf "%s-service-c-mock" }}
   template:
     metadata:
+      annotations:
+        checksum/mocksConfig: {{ include (print $.Template.BasePath "/mocks-configmap.yaml") . | sha256sum }}
       labels:
         app.kubernetes.io/name: {{ include "weaviate-health.fullname" . | printf "%s-service-c-mock" }}
     spec:
@@ -117,11 +131,15 @@ spec:
           volumeMounts:
             - name: app-config
               mountPath: /home/wiremock
-              readOnly: true
           resources:
             {{- toYaml .Values.mocks.resources | nindent 12 }}
       volumes:
         - name: app-config
-          hostPath:
-            path: {{ .Values.mocks.pwd }}/.local/wiremock/service-c
+          configMap:
+            name: {{ include "weaviate-health.fullname" . | printf "%s-mocks" }}
+            items:
+              - key: service-a__files-health.json
+                path: __files/health.json
+              - key: service-a-mappings-config.json
+                path: mappings/config.json
 {{- end }}
