--- a/deploy/charts/weaviate-health/templates/deployment-runner.yaml
+++ b/deploy/charts/weaviate-health/templates/deployment-runner.yaml
@@ -36,6 +36,8 @@ spec:
           env:
             - name: LOG_LEVEL
               value: {{ quote .Values.runner.logLevel }}
+            - name: LOG_FORMAT
+              value: {{ quote .Values.runner.logFormat }}
             - name: DEFAULT_HEALTH_CHECK_PATH
               value: {{ quote .Values.runner.defaultHealthCheckPath }}
             - name: WORKERS
