--- a/deploy/charts/health/templates/deployment-runner.yaml
+++ b/deploy/charts/health/templates/deployment-runner.yaml
@@ -1,26 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "weaviate-health.fullname" . | printf "%s-runner" }}
+  name: {{ include "health.fullname" . | printf "%s-runner" }}
   labels:
-    {{ include "weaviate-health.labels" . | nindent 4 }}
+    {{ include "health.labels" . | nindent 4 }}
 spec:
 {{- if not .Values.runner.autoscaling.enabled }}
   replicas: {{ .Values.runner.replicaCount }}
 {{- end }}
   selector:
     matchLabels:
-      {{ include "weaviate-health.selectorLabels" . | nindent 6 }}
+      {{ include "health.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       annotations:
         checksum/sourcesConfig: {{ include (print $.Template.BasePath "/sources-configmap.yaml") . | sha256sum }}
       labels:
-        {{ include "weaviate-health.labels" . | nindent 8 }}
+        {{ include "health.labels" . | nindent 8 }}
     spec:
       securityContext:
         fsGroup: 1000
-      serviceAccountName: {{ include "weaviate-health.fullname" . }}
+      serviceAccountName: {{ include "health.fullname" . }}
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -30,7 +30,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command:
-            - "/bin/weaviate-health"
+            - "/bin/health"
           args:
             - "runner"
           env:
@@ -66,7 +66,7 @@ spec:
           projected:
             sources:
               - configMap:
-                  name: {{ include "weaviate-health.fullname" . | printf "%s-sources" }}
+                  name: {{ include "health.fullname" . | printf "%s-sources" }}
                   items:
                     - key: sources.yaml
                       path: sources.yaml
