--- a/deploy/charts/health/templates/service-account.yaml
+++ b/deploy/charts/health/templates/service-account.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "weaviate-health.fullname" . }}
+  name: {{ include "health.fullname" . }}
   annotations:
     {{- if .Values.serviceAccountAnnotations }}
     {{- toYaml .Values.serviceAccountAnnotations | nindent 4 }}
